added code snippet for gradient

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 
       </form>
     </div>
+
+    <br>
+
+    <div class="css-code-container">
+      <code id="gradient-css-code">background-image: linear-gradient(45deg, red, blue);</code>
+    </div>
   </div>
 
   <script src="main.js"></script>
