--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 </head>
 <body>
 
+  <!--
   <div class="sidenav">
     <a href="#">one</a>
     <a href="#">two</a>
     <a href="#">three</a>
   </div>
+  -->
 
   <div class="container">
     <h1>Gradient Creator</h1>
@@ -30,7 +33,7 @@
 
         <div>
           <label for="angle">Angle</label>
-          <input type="number" name="angle" value="225" min="0" max="360" required>
+          <input type="number" name="angle" value="45" min="0" max="360" required>
         </div>
 
         <button type="button" name="create_button" onclick="create_gradient();">Create Gradient</button>
@@ -41,7 +44,8 @@
     <br>
 
     <div class="css-code-container">
-      <code id="gradient-css-code">background-image: linear-gradient(225deg, red, blue);</code>
+      <code id="gradient-css-code">background-image: linear-gradient(45deg, #ff0000, #0000ff);</code>
+      <span><button onclick="copyToClipboard();"><i class="fas fa-clipboard-check"></i></button>
     </div>
   </div>
 
