added preset gradients

--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
 </head>
 <body>
 
-  <!--
   <div class="sidenav">
-    <a href="#">one</a>
-    <a href="#">two</a>
-    <a href="#">three</a>
+    <p>Presets</p>
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview"></div>Peach
+    </div>
   </div>
-  -->
 
   <div class="container">
     <h1>Gradient Creator</h1>
