presets working && added two more presets

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
     <p>Presets</p>
     <div class="preset-gradient-menu-item">
       <div class="gradient-preview gradient-peach" id="gradient-peach"></div> Peach
-        <button onclick="load_gradient_preset('gradient-peach');">
+        <button onclick="load_preset_gradient('peach');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-misty-morning" id="gradient-misty-morning"></div> Misty Morning
+        <button onclick="load_preset_gradient('misty_morning');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-limeaid" id="gradient-limeaid"></div> Limeaid
+        <button onclick="load_preset_gradient('limeaid');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
