added preset gradients

--- a/index.html
+++ b/index.html
@@ -28,6 +28,55 @@
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-glimmer" id="gradient-glimmer"></div> Glimmer
+        <button onclick="load_preset_gradient('glimmer');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-sunrise" id="gradient-sunrise"></div> Sunrise
+        <button onclick="load_preset_gradient('sunrise');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-sunset" id="gradient-sunset"></div> Sunset
+        <button onclick="load_preset_gradient('sunset');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-lemon" id="gradient-lemon"></div> Lemon
+        <button onclick="load_preset_gradient('lemon');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-lavender" id="gradient-lavender"></div> Lavender
+        <button onclick="load_preset_gradient('lavender');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-seafoam" id="gradient-seafoam"></div> Seafoam
+        <button onclick="load_preset_gradient('seafoam');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
+
+    <div class="preset-gradient-menu-item">
+      <div class="gradient-preview gradient-velvet" id="gradient-velvet"></div> Velvet
+        <button onclick="load_preset_gradient('velvet');">
+          <i class="fas fa-angle-double-right"></i>
+        </button>
+    </div>
   </div>
 
   <div class="container">
