--- a/index.html
+++ b/index.html
@@ -10,70 +10,70 @@
   <div class="sidenav">
     <p>Presets</p>
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-peach" id="gradient-peach"></div> Peach
+      <div class="gradient-preview gradient-peach" id="gradient-peach"></div> <span>Peach</span>
         <button onclick="load_preset_gradient('peach');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-misty-morning" id="gradient-misty-morning"></div> Misty Morning
+      <div class="gradient-preview gradient-misty-morning" id="gradient-misty-morning"></div> <span>Misty Morning</span>
         <button onclick="load_preset_gradient('misty_morning');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-limeaid" id="gradient-limeaid"></div> Limeaid
+      <div class="gradient-preview gradient-limeaid" id="gradient-limeaid"></div> <span>Limeaid</span>
         <button onclick="load_preset_gradient('limeaid');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-glimmer" id="gradient-glimmer"></div> Glimmer
+      <div class="gradient-preview gradient-glimmer" id="gradient-glimmer"></div> <span>Glimmer</span>
         <button onclick="load_preset_gradient('glimmer');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-sunrise" id="gradient-sunrise"></div> Sunrise
+      <div class="gradient-preview gradient-sunrise" id="gradient-sunrise"></div> <span>Sunrise</span>
         <button onclick="load_preset_gradient('sunrise');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-sunset" id="gradient-sunset"></div> Sunset
+      <div class="gradient-preview gradient-sunset" id="gradient-sunset"></div> <span>Sunset</span>
         <button onclick="load_preset_gradient('sunset');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-lemon" id="gradient-lemon"></div> Lemon
+      <div class="gradient-preview gradient-lemon" id="gradient-lemon"></div> <span>Lemon</span>
         <button onclick="load_preset_gradient('lemon');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-lavender" id="gradient-lavender"></div> Lavender
+      <div class="gradient-preview gradient-lavender" id="gradient-lavender"></div> <span>Lavender</span>
         <button onclick="load_preset_gradient('lavender');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-seafoam" id="gradient-seafoam"></div> Seafoam
+      <div class="gradient-preview gradient-seafoam" id="gradient-seafoam"></div> <span>Seafoam</span>
         <button onclick="load_preset_gradient('seafoam');">
           <i class="fas fa-angle-double-right"></i>
         </button>
     </div>
 
     <div class="preset-gradient-menu-item">
-      <div class="gradient-preview gradient-velvet" id="gradient-velvet"></div> Velvet
+      <div class="gradient-preview gradient-velvet" id="gradient-velvet"></div> <span>Velvet</span>
         <button onclick="load_preset_gradient('velvet');">
           <i class="fas fa-angle-double-right"></i>
         </button>
